# injected

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  api.py  cfuncs.py  channel.py  example_injector.py  injector.py  mywin32enum.py  setup.py
.github/workflows/: build_dotnet.yml  codeql.yml
Executable/: README.md  cfuncs.py  execute_injector.py  injector.py  raw_injector.py
Source/: CMakeLists.txt  dllmain.cpp  winmsg_listener.py
VSExample/: CMakeLists.txt  Source.cpp
backends/dotnet/: CMakeLists.txt
backends/dotnet/src/bootstrap/: CMakeLists.txt  Log.cpp  Log.h  dllmain.cpp  pch.h
backends/dotnet/src/wpf/: Actions.cs  CMakeLists.txt  ControlsHandlerBase.cs  Find.cs  Main.cs  Replies.cs
backends/dotnet/src/wpf/Properties/: AssemblyInfo.cs
backends/dotnet/src/wpf/WPF/: WPFActions.cs  WPFControlsHandler.cs  WPFGetChildren.cs  WPFGetControlType.cs  WPFGetFocusedElement.cs  WPFGetHandle.cs  WPFGetName.cs  WPFGetParent.cs  WPFGetProperties.cs  WPFGetProperty.cs  WPFGetRectangle.cs  WPFInvokeMethod.cs  WPFRaiseEvent.cs  WPFSetFocus.cs  WPFSetProperty.cs
backends/hook/: CMakeLists.txt
backends/hook/src/: CMakeLists.txt
backends/hook/src/winmsg_listener/: CMakeLists.txt
dll_source/winmsg_listener/: CMakeLists.txt  dllmain.cpp
injectdll/: actionlogger.py  api.py  cfuncs.py  channel.py  injector.py  sysinfo.py
